--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/vue-query": "^5.59.13",
     "@vitest/coverage-istanbul": "^1.2.2",
     "@vueuse/core": "^10.8.0",
+    "bech32": "^2.0.0",
     "cosmjs-types": "^0.9.0",
     "dayjs": "^1.11.10",
     "vite-plugin-node-polyfills": "^0.22.0",
