--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@agoose77/markdown-it-mermaid": "^1.1.0",
     "@cosmjs/proto-signing": "^0.32.2",
     "@cosmostation/cosmos-client": "^0.0.5",
     "@tailwindcss/typography": "^0.5.12",
     "@tanstack/vue-query": "^5.59.13",
+    "@types/markdown-it": "^14.1.2",
     "@vitest/coverage-istanbul": "^1.2.2",
     "@vueuse/core": "^10.8.0",
     "bech32": "^2.0.0",
     "cosmjs-types": "^0.9.0",
     "dayjs": "^1.11.10",
+    "dompurify": "^3.2.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-github-alert": "^1.0.6",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vue-i18n": "^10.0.4",
     "vue-router": "^4.2.5"
