--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitest/coverage-istanbul": "^1.2.2",
     "@vueuse/core": "^10.8.0",
     "bech32": "^2.0.0",
+    "bignumber.js": "^9.1.2",
     "cosmjs-types": "^0.9.0",
     "dayjs": "^1.11.10",
     "dompurify": "^3.2.0",
