--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "^20.19.0 || >=22.20.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "lint": "eslint -c .eslintrc.cjs \"./{tests,src}/**/*.{ts,js,tsx,vue,json}\" --no-error-on-unmatched-pattern --ignore-path .gitignore",
-    "lint:fix": "eslint -c .eslintrc.cjs \"./{tests,src}/**/*.{ts,js,tsx,vue,json}\" --fix --no-error-on-unmatched-pattern --ignore-path .gitignore",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "test:e2e:serve": "serve -s dist -l 8080",
     "test:e2e": "npx playwright install && playwright test",
@@ -19,60 +22,64 @@
   },
   "dependencies": {
     "@agoose77/markdown-it-mermaid": "^1.1.0",
-    "@cosmjs/proto-signing": "^0.32.2",
+    "@cosmjs/proto-signing": "^0.36.0",
     "@cosmostation/cosmos-client": "^0.0.5",
-    "@tailwindcss/typography": "^0.5.12",
-    "@tanstack/vue-query": "^5.59.13",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/vue-query": "^5.89.0",
     "@types/markdown-it": "^14.1.2",
-    "@vitest/coverage-istanbul": "^1.2.2",
-    "@vueuse/core": "^10.8.0",
+    "@vitest/coverage-istanbul": "^3.2.4",
+    "@vueuse/core": "^13.9.0",
     "bech32": "^2.0.0",
-    "bignumber.js": "^9.1.2",
-    "cosmjs-types": "^0.9.0",
-    "dayjs": "^1.11.10",
-    "dompurify": "^3.2.0",
+    "bignumber.js": "^9.3.1",
+    "cosmjs-types": "^0.10.1",
+    "dayjs": "^1.11.18",
+    "dompurify": "^3.2.6",
     "markdown-it": "^14.1.0",
     "markdown-it-github-alert": "^1.0.6",
-    "vite-plugin-node-polyfills": "^0.22.0",
-    "vue-i18n": "^10.0.4",
-    "vue-router": "^4.2.5"
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vue": "^3.5.21",
+    "vue-i18n": "^11.1.12",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@atomone/atomone-types": "^1.0.0",
-    "@cosmjs/stargate": "^0.32.4",
-    "@cosmjs/tendermint-rpc": "^0.32.4",
-    "@keplr-wallet/types": "^0.12.139",
-    "@playwright/experimental-ct-vue": "1.44.0-alpha-2024-04-05",
-    "@playwright/test": "1.44.0-alpha-2024-04-05",
-    "@types/node": "^20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vitest/coverage-v8": "^1.2.2",
-    "@vitest/ui": "^1.2.2",
-    "@vue/compiler-dom": "^3.4.21",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.17",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.21.1",
-    "happy-dom": "^14.4.0",
+    "@atomone/atomone-types": "^1.0.3",
+    "@cosmjs/stargate": "^0.36.0",
+    "@cosmjs/tendermint-rpc": "^0.36.0",
+    "@keplr-wallet/types": "^0.12.272",
+    "@playwright/experimental-ct-vue": "1.55.0",
+    "@playwright/test": "1.55.0",
+    "@stylistic/eslint-plugin": "^5.3.1",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.5.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/eslint-plugin": "^1.3.10",
+    "@vitest/ui": "^3.2.4",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.2",
+    "eslint": "^9.35.0",
+    "eslint-plugin-playwright": "^2.2.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-vue": "~10.4.0",
+    "happy-dom": "^18.0.1",
+    "jiti": "^2.5.1",
+    "jsdom": "^27.0.0",
     "mitt": "^3.0.1",
-    "mobx": "^6.12.0",
-    "mobx-vue-lite": "^0.4.2",
-    "postcss": "^8.4.33",
-    "postcss-nesting": "^12.0.4",
-    "prettier": "^3.2.4",
-    "serve": "^14.2.1",
+    "mobx": "^6.13.7",
+    "mobx-vue-lite": "^0.4.3",
+    "npm-run-all2": "^8.0.4",
+    "postcss": "^8.5.6",
+    "postcss-nesting": "^13.0.2",
+    "serve": "^14.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.2.8",
-    "vitest": "^1.2.2",
-    "vue": "^3.5.12",
-    "vue-tsc": "^2.0.22"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.5",
+    "vite-plugin-vue-devtools": "^8.0.2",
+    "vitest": "^3.2.4",
+    "vue-tsc": "^3.0.7"
   }
 }
